--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
         "vue-echarts": "^7.0.3",
         "vue-i18n": "^9.4.1",
         "vue-router": "^4.4.3",
+        "vue3-ace-editor": "^2.2.4",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
