--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,8 @@
         "path": "^0.12.7",
         "pinia": "^2.2.2",
         "qs": "^6.13.0",
+        "roslib": "^1.4.1",
+        "rosnodejs": "^3.1.0",
         "screenfull": "^6.0.2",
         "sortablejs": "^1.15.3",
         "spark-md5": "^3.0.2",
